examples/istio/manifests/apps/_namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: apps
  labels:
    istio-injection: enabled
