examples/istio/manifests/apps/trafficgen.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: trafficgen
  labels:
    istio-injection: enabled
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trafficgenerator
  namespace: trafficgen
  labels:
    app: trafficgenerator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trafficgenerator
  template:
    metadata:
      labels:
        app: trafficgenerator
    spec:
      containers:
        - name: trafficgenerator
          image: appropriate/curl
          args:
            - /bin/sh
            - -c
            - |
              while :; do
                curl -i http://app-a.apps.svc/proxy/app-b.apps.svc
                sleep 20
              done
