examples/istio/manifests/apps/service-b.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: app-b
  namespace: apps
  labels:
    app: app-b
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-b
  template:
    metadata:
      labels:
        app: app-b
    spec:
      containers:
        - name: app-b
          image: ghcr.io/jcchavezs/httpmole:0.0.1
          imagePullPolicy: IfNotPresent
          ports:
            - name: web
              containerPort: 10080
---
apiVersion: v1
kind: Service
metadata:
  name: app-b
  namespace: apps
spec:
  ports:
    - name: web
      port: 80
      targetPort: web
  selector:
    app: app-b
