examples/istio/manifests/apps/ingress.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: ingress
  namespace: apps
  labels:
    app: ingress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ingress
  template:
    metadata:
      labels:
        app: ingress
    spec:
      containers:
        - name: ingress
          image: ghcr.io/jcchavezs/httpmole:0.0.1
          imagePullPolicy: IfNotPresent
          ports:
            - name: web
              containerPort: 10080
---
apiVersion: v1
kind: Service
metadata:
  name: ingress
  namespace: apps
spec:
  ports:
    - name: web
      port: 8080
      targetPort: web
  selector:
    app: ingress
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-ingress
  annotations:
    kubernetes.io/ingress.class: istio
spec:
  rules:
    - host: "*"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ingress
                port:
                  name: web
